[package]
name = "server"
version = "0.1.0"
edition = "2024"



[dependencies]
shared = {path = "../shared"}
pqcrypto = "0.18.1"
pqcrypto-kyber = "0.8.1"
aes-gcm = "0.10.3"
clap = { version = "4.5.49", features = ["derive"] }
log = "0.4.28"
serde = {version = "1.0.228", features = ["derive"]}
serde_ini = "0.2.0"
tokio = { version = "1.48.0", features = ["full"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
