[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4.42"
colored = "3.0.0"
clap = { version = "4.5.49", features = ["derive"] }
pqcrypto = "0.18.1"
pqcrypto-kyber = "0.8.1"
custom_error = "1.9.2"
